{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 69,
  "lineage": "1c456569-b0b1-3ad5-f786-eab7201d294c",
  "resources": [
    {
      "module": "module.load-balancer[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:521503820723:loadbalancer/app/jerin-tf/d07339d8843807f6",
            "arn_suffix": "app/jerin-tf/d07339d8843807f6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jerin-tf-2109952822.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:521503820723:loadbalancer/app/jerin-tf/d07339d8843807f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jerin-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-048416bdeff616625"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0222bdaf259d65cfd"
              },
              {
                "subnet_id": "subnet-02bc4f1f3f7e26416"
              },
              {
                "subnet_id": "subnet-04927f289a3adc145"
              },
              {
                "subnet_id": "subnet-0c96dbe2d6eb02c84"
              },
              {
                "subnet_id": "subnet-0d3b9ae0b41956f19"
              },
              {
                "subnet_id": "subnet-0fbf5f87f72b258af"
              }
            ],
            "subnets": [
              "subnet-0222bdaf259d65cfd",
              "subnet-02bc4f1f3f7e26416",
              "subnet-04927f289a3adc145",
              "subnet-0c96dbe2d6eb02c84",
              "subnet-0d3b9ae0b41956f19",
              "subnet-0fbf5f87f72b258af"
            ],
            "tags": {
              "Name": "jerin-tf"
            },
            "tags_all": {
              "Name": "jerin-tf"
            },
            "vpc_id": "vpc-03b17fb842cf1c5fc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_subnets.this",
            "module.security-group-lb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:521503820723:listener/app/jerin-tf/d07339d8843807f6/008900061fdc591b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:521503820723:listener/app/jerin-tf/d07339d8843807f6/008900061fdc591b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:521503820723:loadbalancer/app/jerin-tf/d07339d8843807f6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.this",
            "module.load-balancer.aws_lb.this",
            "module.load-balancer.aws_lb_target_group.this",
            "module.security-group-lb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:521503820723:listener/app/jerin-tf/d07339d8843807f6/4de86477d088c97b",
            "certificate_arn": "arn:aws:acm:us-east-1:521503820723:certificate/6d0fffd8-da19-447c-8d21-5ea0f30c0f64",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:521503820723:targetgroup/node-app-1/0c1b9cdf83e6f6a7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:521503820723:listener/app/jerin-tf/d07339d8843807f6/4de86477d088c97b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:521503820723:loadbalancer/app/jerin-tf/d07339d8843807f6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.this",
            "module.load-balancer.aws_lb.this",
            "module.load-balancer.aws_lb_target_group.this",
            "module.security-group-lb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:521503820723:targetgroup/node-app-1/0c1b9cdf83e6f6a7",
            "arn_suffix": "targetgroup/node-app-1/0c1b9cdf83e6f6a7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-410",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:521503820723:targetgroup/node-app-1/0c1b9cdf83e6f6a7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "node-app-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Node-App-1"
            },
            "tags_all": {
              "Name": "Node-App-1"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03b17fb842cf1c5fc"
          }
        }
      ]
    },
    {
      "module": "module.security-group-ecs[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521503820723:security-group/sg-06c6908ca71b4f7c1",
            "description": "VPC created by terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c6908ca71b4f7c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048416bdeff616625"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Node-App-1-ECS",
            "name_prefix": "",
            "owner_id": "521503820723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Node-App-1-ECS"
            },
            "tags_all": {
              "Name": "Node-App-1-ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b17fb842cf1c5fc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security-group-ecs[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-404108015",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06c6908ca71b4f7c1",
            "security_group_rule_id": "sgr-06b5344abf1db622f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-ecs.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-ecs[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "source-sg-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3000,
            "id": "sgrule-2117366728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06c6908ca71b4f7c1",
            "security_group_rule_id": "sgr-0b5ec6bba401d7d31",
            "self": false,
            "source_security_group_id": "sg-048416bdeff616625",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-ecs.aws_security_group.this",
            "module.security-group-lb.aws_security_group.this",
            "module.security-group-lb.aws_security_group_rule.egress",
            "module.security-group-lb.aws_security_group_rule.egress-source-sg",
            "module.security-group-lb.aws_security_group_rule.ingress",
            "module.security-group-lb.aws_security_group_rule.source-sg-tcp",
            "module.security-group-lb.aws_security_group_rule.source-sg-udp",
            "module.security-group-lb.aws_security_group_rule.ssh_ingress",
            "module.security-group-lb.aws_security_group_rule.udp"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-lb[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521503820723:security-group/sg-048416bdeff616625",
            "description": "VPC created by terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048416bdeff616625",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jerin-tf-LB",
            "name_prefix": "",
            "owner_id": "521503820723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jerin-tf-LB"
            },
            "tags_all": {
              "Name": "jerin-tf-LB"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b17fb842cf1c5fc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security-group-lb[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1938055838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-048416bdeff616625",
            "security_group_rule_id": "sgr-0ea0b7034d5f31d92",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-lb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-lb[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3870520293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048416bdeff616625",
            "security_group_rule_id": "sgr-0d8a75b642add02c5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-lb.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1277600622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048416bdeff616625",
            "security_group_rule_id": "sgr-01786091c27917131",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group-lb.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}